change meta tag for vieewport

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
       sizes="16x16"
       href="/fav_icon/favicon-16x16.png"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, interactive-widget=resizes-content"
+    />
     <link href="/src/style.css" rel="stylesheet" />
     <link rel="stylesheet" href="src/normalize.css" />
     <title>Espresso Echo</title>
